# is-impl

./: Cargo.toml  README.md
examples/: future_compat.rs
src/: lib.rs
